Bug 148962 - In formula editor Unicode alt+X does not display the symbol needed
Summary: In formula editor Unicode alt+X does not display the symbol needed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-05-06 11:00 UTC by Alex
Modified: 2022-05-08 08:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2022-05-06 11:00:53 UTC Comment hidden (obsolete)
Comment 1 Alex 2022-05-06 11:11:17 UTC Comment hidden (obsolete)
Comment 2 Alex 2022-05-06 11:16:03 UTC
== New post with corrections ===

On my linux Mint Una (64bits), impossible to use unicode shortcuts anymore.

Till then I used to type unicode and alt+x in my formula editor so that I had the desired symbol in my formula.
Ex:
2115 + "alt X" = IN (natural integers set)



But since the LO.7.2.2 it returns something weird:
first, the desire symbol appears in a blink,
then LO returns U+2115 (as a text written).

I thought it was kind of a new code to type, then I "alt X " again, and it remains this U+2115.



Now I must type 2115 "alt X" in my writer sheet, and copy/paste in the formula.

It's really not convenient, for I spend a lot of time to write math documents...
Comment 3 Mike Kaganski 2022-05-06 11:59:43 UTC
Regression after commit 20e8e09a40f5b82992655c565207f0537fc11d24
  Author Caolán McNamara <caolanm@redhat.com>
  Date   Tue Apr 13 12:19:13 2021 +0100
    weld SmEditTextWindow
Comment 4 sdc.blanco 2022-05-06 12:05:48 UTC Comment hidden (obsolete)
Comment 5 Mike Kaganski 2022-05-06 12:09:34 UTC
(In reply to Alex from comment #1)

Please note that you should *not* confirm your own bugs. Only after the bug had been confirmed by someone else (like me in this case), it gets NEW status. Thanks.
Comment 6 Mike Kaganski 2022-05-06 12:10:35 UTC
(In reply to sdc.blanco from comment #4)

I reproduce on Windows, both using master and 7.2.0.
Comment 7 sdc.blanco 2022-05-06 12:25:39 UTC Comment hidden (obsolete)
Comment 8 Mike Kaganski 2022-05-06 12:33:48 UTC
(In reply to sdc.blanco from comment #7)
> Do not reproduce with 7.2.6.2
> 
> STR
> 
> 1. New document

What is "New document"? I *suspect* that you mean Writer - which is wrong, and which is why you don't repro: the component here is "Formula editor", which corresponds to Math; the problem description tells "I spend a lot of time to write math documents".

> 2. F2 (open Formula Editor)

... which is indeed not needed when you edit Math documents ;)

> 3. 2115, then Alt+X
Comment 9 sdc.blanco 2022-05-06 12:44:46 UTC
(In reply to Mike Kaganski from comment #8)
> I *suspect* that you mean Writer 
Correct suspicion.  OP started with "formula editor"

New STR.
1. File > New > Formula
2. 2115, then  Alt+X

Actual: U+2115
Expected: ℕ

Repro in windows, 7.2.6 and 7.4.0.0. -- with apologies for "noise"
Comment 10 Caolán McNamara 2022-05-06 13:31:04 UTC
looks like alt+x is turned into SID_UNICODE_NOTATION_TOGGLE and is dispatched twice
Comment 11 Commit Notification 2022-05-06 15:18:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/531405a695d6bad044545ab96f2eb26e5c6d5778

tdf#148962 starmath's UnicodeNotationToggle (alt+x) getting called twice

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2022-05-06 15:19:59 UTC
done in trunk, backport to 7-4 in gerrit
Comment 13 Alex 2022-05-06 15:40:07 UTC
(In reply to Mike Kaganski from comment #5)
> (In reply to Alex from comment #1)
> 
> Please note that you should *not* confirm your own bugs. Only after the bug
> had been confirmed by someone else (like me in this case), it gets NEW
> status. Thanks.

Oh ok, sure.
Please forgive me, I'm new at bugzilla ^^'
Thanks for the warning ;)
Comment 14 Commit Notification 2022-05-08 08:08:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/db439064030a8a90171d03c8250398b063499830

tdf#148962 starmath's UnicodeNotationToggle (alt+x) getting called twice

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.