tdf#148962 starmath's UnicodeNotationToggle (alt+x) getting called twice

Change-Id: Ib150e4825c547c19a30c7b66d3f33904b814a917